Début de l'mplémentation pour cacher clé api

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,9 @@
     "ConnectionURI": "mongodb://localhost:27017",
     "DatabaseName": "Bourse",
     "CollectionName": "HttpRequetes"
+  },
+  "Perigon": {
+    "ConnectionURI": "https://api.goperigon.com/v1/all",
+    "ApiKey": "[KEY]"
   }
 }
